# psycheos-production

./: .env.example  .gitignore  CLAUDE.md  Dev_document.docx  Procfile  PsycheOS_Deployment_Plan.md  Screen_v2_Pro_v2_Migration_Plan.md  alembic.ini  requirements.txt
_migrate_simulator/: doors  requirements.txt
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
legacy-backend/: .env.example  .gitignore  PsycheOS_Screening_v2_Technical_Specification.docx  README.md  alembic.ini  pyproject.toml  requirements.txt  start_command.txt
legacy-backend/alembic/: env.py
legacy-backend/alembic/versions/: 001_initial_migration.py
legacy-backend/app/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  main.py
legacy-backend/app/api/: __init__.py  session.py  specialist.py
legacy-backend/app/data/: routing_rules.json  screen_bank.json  system_prompt.txt
legacy-backend/app/models/: __init__.py  output.py  session.py  specialist.py  transaction.py
legacy-backend/app/schemas/: __init__.py  schemas.py
legacy-backend/app/services/: __init__.py  claude_orchestrator.py  screen_bank_loader.py  session_manager.py  token_manager.py
legacy-backend/bots/: __init__.py  client_bot.py  keyboards.py  pro_bot.py
psycheos-conceptualizer/: .gitignore  analysis.py  bot.py  bot_backup.py  config.py  doors.odt  llm_service.py  requirements.txt
psycheos-interpreter/: doors_int.txt  interpreter_bot.py  policy_engine.py  requirements.txt
psycheos-simulator/: run.py
scripts/: cleanup_stuck_reservations.py  set_webhooks.py
tests/: conftest.py  (+3 more)
(+133 files in other folders)
