[project]
name = "psycheos-backend"
version = "1.0.0"
description = "PsycheOS - Psychological screening system MVP"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "aiogram",
    "anthropic",
    "httpx",
    "structlog",
    "pydantic",
    "pydantic-settings",
    "python-dateutil",
    "aiosqlite",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
